# nutrinfo

./: README.md  install.sh  pyproject.toml  uninstall.sh
nutrinfo/: __init__.py  cli.py  ingredient.py  recipe.py  utils.py
src/: ingredient.py  recipe.py  utils.py
