[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nutrinfo"
version = "0.0.1"
authors = [
{name="Hugo Lóio"},
]
description = "A cli tool for creating recipe nutritional info tables"
requires-python = ">=3.8"
dependencies = [
    "requests",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
dependencies = [
  "tabulate",
  "numpy"
]

[project.scripts]
mytool = "nutrinfo.cli:main"

[project.urls]
"Homepage" = "https://github.com/Hugo-loio/nutrinfo"

